--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,22 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter'
 
     implementation 'org.apache.commons:commons-lang3:3.12.0'
+
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.18.0'
+
+    implementation 'org.projectlombok:lombok:1.18.34'
+    annotationProcessor 'org.projectlombok:lombok:1.18.34'
+
+    implementation('org.slf4j:slf4j-api:2.0.16')
+    implementation('org.slf4j:slf4j-log4j12:2.0.16')
+
+    implementation 'jakarta.servlet:jakarta.servlet-api:6.1.0'
+    implementation 'jakarta.platform:jakarta.jakartaee-api:9.1.0'
+
+    implementation 'org.apache.tomcat.embed:tomcat-embed-core:10.0.20'
+    implementation 'org.apache.tomcat.embed:tomcat-embed-jasper:10.0.20'
+    implementation 'org.apache.logging.log4j:log4j-appserver:2.24.1'
+    implementation 'org.apache.logging.log4j:log4j-core:2.24.1'
 }
 
 
